2011-04-18  Andreas Kling  <kling@webkit.org>

Reviewed by Adam Barth.

        [Qt] DRT: Unbreak redirection of http:/ URLs.
        https://bugs.webkit.org/show_bug.cgi?id=58779

        * platform/qt/Skipped: Unskip http/tests/loading/cross-origin-XHR-willLoadRequest.html
2011-04-18  Andreas Kling  <kling@webkit.org>

        Reviewed by Adam Barth.

        REGRESSION (r84010): [Qt] DRT: Unbreak redirection of http:/ URLs.
        https://bugs.webkit.org/show_bug.cgi?id=58779

        KURL::host() doesn't return the host part of [broken] http:/ URLs, so use
        QUrl instead to match the behavior of other ports.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::dispatchWillSendRequest):

Canonical link: https://commits.webkit.org/73908@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84168 268f45cc-cd09-0410-ab3c-d52691b4dbfc